--- a/pacific_dashboards/android/app/src/main/res/drawable/launch_background.xml
+++ b/pacific_dashboards/android/app/src/main/res/drawable/launch_background.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Modify this file to customize your launch splash screen -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-   //<item android:drawable="@color/background_color" />
+   //<item android:drawable="@color/backgroundcolor" />
 
-    <!-- You can insert your own image assets here -->
     <item>
         <bitmap
-            android:gravity="center"
+            android:gravity="fill"
             android:src="@drawable/splash" />
     </item> 
 </layer-list>
