--- a/pacific_dashboards/android/app/src/main/res/drawable/launch_background.xml
+++ b/pacific_dashboards/android/app/src/main/res/drawable/launch_background.xml
@@ -5,7 +5,7 @@
 
     <item>
         <bitmap
-            android:gravity="fill"
+            android:gravity="center"
             android:src="@drawable/splash" />
     </item> 
 </layer-list>
